Updates for EUI, still incoporating new pages

--- a/Other files/demo.html
+++ b/Other files/demo.html
@@ -57,7 +57,7 @@ class="external-page">
                            </div>
                            <div class="col-xs-12 col-sm-3">
                                <label id="demo_student_login_label" for="demo_student_login">
-                                   Student Login
+                                   ~[text:psx.htmlc.Student Login
                                </label>
                                <input id="demo_student_login" type="text" class="form-control ps-readonly" readonly value="~([Students.U_Students_Extension]pei_studentlogin)">
                            </div>
