--- a/WEB_ROOT/teachers/alerts/student_services_alert_pei.html
+++ b/WEB_ROOT/teachers/alerts/student_services_alert_pei.html
@@ -2,10 +2,12 @@
    <a href='#' onclick="tn_goToStudentDocumentFromAlert('~(studentfrn)','IS_SPED'); return false;" title="~[text:psx.htmlc.alerts.student_services_alert.pei_custom.open_document]" style="outline-style:none;"><img class='alertImage' src='/images/img/SPED_SPED_Alert.svg' /></a>
    <div class='alertContent'>
       <p class='alertHeader'>~(studentname)</p>
-         <p>~[text:psx.htmlc.alerts.student_services_alert.pei_custom.has_a_profile]<br /></p>
-         <p><a href='#' onclick="tn_goToSpecialProgramsPage('~(studentfrn)','IS_SPED'); return false;" title="~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list]"><img src='/images/img/SPED_list.svg' alt='list' style='height:20px;width:20px;' /> <span>&nbsp;~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list]</span></a><br />
-            <a href='#' onclick="tn_goToStudentDocumentFromAlert('~(studentfrn)','gotolist'); return false;" title="~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list_pssp]"><img src='/images/img/SPED_icon-launch.svg' alt='launch' style='height:24px;width:24px;' /> <span>~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list_pssp]</span></a><br />
-            <a href='#' onclick="tn_goToStudentDocumentFromAlert('~(studentfrn)','IS_SPED'); return false;" title="~[text:psx.htmlc.alerts.student_services_alert.pei_custom.open_document]"><img src='/images/img/SPED_icon-launch.svg' alt='launch' style='height:24px;width:24px;' /> <span>~[text:psx.htmlc.alerts.student_services_alert.pei_custom.open_document]</span></a><br />
-         </p>
+        <p>~[text:psx.htmlc.alerts.student_services_alert.pei_custom.has_a_profile]<br /></p>
+        <p><a href='#' onclick="tn_goToSpecialProgramsPage('~(studentfrn)','IS_SPED'); return false;" title="~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list]"><img src='/images/img/SPED_list.svg' alt='list' style='height:20px;width:20px;' /> <span>&nbsp;~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list]</span></a><br />
+        <a href='#' onclick="tn_goToStudentDocumentFromAlert('~(studentfrn)','gotolist'); return false;" title="~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list_pssp]"><img src='/images/img/SPED_icon-launch.svg' alt='launch' style='height:24px;width:24px;' /> <span>~[text:psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list_pssp]</span></a><br />
+        <a href='#' onclick="tn_goToStudentDocumentFromAlert('~(studentfrn)','IS_SPED'); return false;" title="~[text:psx.htmlc.alerts.student_services_alert.pei_custom.open_document]"><img src='/images/img/SPED_icon-launch.svg' alt='launch' style='height:24px;width:24px;' /> <span>~[text:psx.htmlc.alerts.student_services_alert.pei_custom.open_document]</span></a><br />
+      </p>
+      <p><strong>~[text:psx.htmlc.teachers.alerts.student_services_alert.pei_custom.notes]</strong></p>
+      <p>~([Students.U_Students_Extension]pei_adaptations)</p>
    </div>
 </div>
