--- a/Other files/medicalalert.html
+++ b/Other files/medicalalert.html
@@ -3,7 +3,7 @@
   <div class="alertContent">
       <h2 aria-label="~[text:psx.html.admin_alerts.medicalalertenhanced.health_alert]" tabindex="0">~[text:psx.html.admin_alerts.medicalalertenhanced.health_alert]</h2>
       <p tabindex="0" aria-label="~(alert_medical)" data-ng-style="{'margin-left':'0'}" class="overflowwrapbreak">
-          Allergies: ~([Students]allergies)
+          ~[text:psx.htmlc.admin_alerts.medicalalert.allergies]: ~([Students]allergies)
       </p>
       <p tabindex="0" data-ng-style="{'margin-left':'0'}" class="overflowwrapbreak">~(alert_medical) </p>
       <p tabindex="0" aria-label="~[text:psx.html.admin_alerts.medicalalertenhanced.alert_expires]~[if.~(alert_medicalexpires)=0/0/0]~[text:psx.html.admin_alerts.medicalalertenhanced.never][else]~(alert_medicalexpires)[/if]"
